submodule Pymacs added

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "magit"]
 	path = magit
 	url = https://github.com/magit/magit.git
+[submodule "Pymacs"]
+	path = Pymacs
+	url = https://github.com/pinard/Pymacs.git
