--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "org-mode"]
 	path = org-mode
 	url = git://orgmode.org/org-mode.git
+[submodule "haskell-mode"]
+	path = haskell-mode
+	url = git@github.com:haskell/haskell-mode.git
