Updated .tmux.conf - default prefix

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -4,10 +4,10 @@
 # By pank7 <liyi84@gmail.com>
 #
 
-# Change the prefix key to C-x
+# Change the prefix key to C-a
 unbind C-b
-set -g prefix C-x
-bind C-x send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
 # No bells at all
 set -g bell-action none
